# apiary

./: .dockerignore  .editorconfig  .env.example  .env.testing  .gitignore  .mergify.yml  .shift  .shiftrc  .stickler.yml  .styleci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  NovaOnVaporMonkeyPatch.php  README.md  SECURITY.md  _ide_helper.php  apidoc.footer.md  apidoc.json  boost.json  ca.homestead.homestead.pem  composer.json  docker-compose.yml  eslint.config  fetch-nova.sh  package-lock.json  package.json  patches.json  patches.lock.json  phpcs.xml  phpmd.xml  phpstan.neon  phpunit.xml  pint.json  post-deploy-hook.sh  pre-deploy-hook.sh  psalm-baseline.xml  psalm.xml  renovate-helper.yml  renovate.json  (+4 more)
docs/: .alexrc.yml  .proselintrc.json  .vale.ini  Makefile  conf.py  fix-canonical-links.py  index.rst  pyproject.toml
docs/.styles/: .gitignore
docs/.styles/RoboJackets/: myrobojackets-to-apiary.yml
docs/.styles/Vocab/RoboJackets/: accept.txt
docs/.styles/Vocab/robojackets/: accept.txt
docs/.styles/config/vocabularies/RoboJackets/: accept.txt
docs/admins/: access-override.rst  access-overrides.rst  backup-and-restore.rst  deployment.rst  external-services.rst  membership-agreements.rst  permissions-roles.rst
docs/admins/api/: auth.rst  endpoints.rst  index.rst
docs/members/: access-override.rst  access-overrides.rst
docs/officers/: attendance.rst  events.rst  merchandise.rst  payments.rst  travel.rst  users.rst
docs/officers/dues/: data-model.rst  index.rst  setup.rst
docs/officers/payments/: accept.rst  charge-off.rst  index.rst  refund.rst
docs/officers/travel/: data-model.rst  index.rst  matrix.rst  setup.rst
(+1253 files in other folders)
