[tool.poetry]
name = "apiary-docs"
version = "0"
description = "Documentation for Apiary"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "8.2.3"
sphinx-autobuild = "2024.10.3"
sphinxext-opengraph = "0.11.0"
sphinxcontrib-httpdomain = "1.8.1"
furo = {git = "https://github.com/pradyunsg/furo"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
