[tool.poetry]
name = "apiary-docs"
version = "0"
description = "Documentation for Apiary"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.14"
sphinx = "9.1.0"
sphinx-autobuild = "2025.8.25"
sphinxext-opengraph = "0.13.0"
sphinxcontrib-httpdomain = "1.8.1"
furo = {git = "https://github.com/pradyunsg/furo"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
